vote/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: vote
