vote/kubernetes/virtual-service.yml
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: vs-vote-network-rule
    namespace: omp
  spec:
    hosts:
    - vote
    http:
    - route:
      - destination:
          host: vote
      timeout: 3s
